# bootstrap-ci

./: LICENSE  README.md  bootstrap_ci.py  pyproject.toml
src/: bootstrap_ci.py
